--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a class="active" href="#inicio">Início</a>
         </li>
         <li><a href="https://discord.gg/DH7WzCfmhx" target="_blank">Parceiros</a></li>
-        <li><a href="https://discord.gg/7hTY4s8K" target="_blank">Disord</a></li>
+        <li><a href="https://discord.gg/7hTY4s8K" target="_blank">Discord</a></li>
         <li><a href="#feedback" target="_blank"></a></li> 
         </body>
       </ul>
