--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav>
       <input type="checkbox" id="check" />
       <label for="check" class="checkbtn"> <i class="fas fa-bars" id="navbar__icon"> </i> </label>
 
-      <label class="logo"></label>
+
+      <label class="logo">Bot assistente</label>
+      
       <ul>
         <li>
           <a class="active" href="#inicio">Início</a>
@@ -28,6 +33,6 @@
       </ul>
     </nav>
   
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
